# enigma2pc

./: README  README.md  build_libs.sh  build_openpliPC.sh  build_oscam.sh  build_plugins.sh
enigma2/data/: Makefile.am  keymap.xml  menu.xml  setup.xml  skin_default.xml  skin_display_vuduo2.xml  skin_text.xml  startwizard.xml  xine.conf
enigma2/data/countries/: Makefile.am
plugins/plugins-enigma2/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac  enigma2-plugins-config.h.in
plugins/plugins-enigma2/bitrateviewer/: Makefile.in
plugins/plugins-enigma2/filebrowser/: Makefile.in
plugins/plugins-enigma2/permanentclock/: Makefile.in
plugins/plugins-enigma2/virtualzap/: Makefile.in
xine-lib/: .cvsversion  .hgignore  .hgsigs  .hgtags  AUTHORS  CREDITS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README-VDPAU  TODO  aclocal.m4  autogen.sh  configure  configure.ac  version.sh
xine-lib/contrib/: Makefile.am  Makefile.in  README.contrib
xine-lib/contrib/a52dec/: Makefile.am  Makefile.in  a52_internal.h  bitstream.h  crc.c  diff_against_release.patch  imdct.c  parse.c
xine-lib/contrib/gsm610/: Makefile.am  Makefile.in  add.c  decode.c  gsm.h  gsm_config.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  long_term.c  lpc.c  private.h  proto.h  rpe.c  short_term.c  table.c  unproto.h
xine-lib/contrib/libdca/: Makefile.am  Makefile.in  parse.c
xine-lib/contrib/libdha/: .hgignore  AsmMacros.h  Makefile.am  Makefile.in  cpu_flush.c  irq.c  libdha.c  libdha.h  mmi.c  mtrr.c  pci.c  ports.c  test.c
xine-lib/contrib/libfaad/: Makefile.am  Makefile.in  bits.h  common.h  diff_from_faad2-2.6.1.patch
xine-lib/contrib/libmad/: Makefile.am  Makefile.in
xine-lib/contrib/libmpcdec/: Makefile.am  Makefile.in  diff_from_libmpcdec_1.2.5.patch
xine-lib/contrib/libxdg-basedir/: Makefile.am  Makefile.in  basedir.c
xine-lib/contrib/nosefart/: Makefile.am  Makefile.in  diff_to_nosefart_cvs.patch  dis6502.c  dis6502.h  fds_snd.c  fds_snd.h  fmopl.c  fmopl.h  log.c  log.h  memguard.c  memguard.h  mmc5_snd.c  mmc5_snd.h  nes6502.c  nes6502.h  nes_apu.c  nes_apu.h  nsf.c  nsf.h  osd.h  types.h  version.h  vrc7_snd.c  vrc7_snd.h  vrcvisnd.c  vrcvisnd.h
xine-lib/contrib/vidix/: Makefile.am  Makefile.in  README  fourcc.h  vidix.h  vidix.txt  vidixlib.c  vidixlib.h
xine-lib/debian/: README.Debian  changelog  control  copyright  libxine2-dev.install  libxine2-doc.docs  libxine2-doc.install  libxine2.install  reportbug.presubj  rules  shlibdeps.sh  watch
xine-lib/doc/: Doxyfile.in  Makefile.am  Makefile.in  README  README.MINGWCROSS  README.WIN32  README.dvb  README.dxr3  README.freebsd  README.irix  README.macosx  README.network_dvd  README.opengl  README.solaris  README_xxmc.html
xine-lib/doc/faq/: .hgignore  Makefile.am  Makefile.in  README  faq.docbook  faq.xsl
xine-lib/doc/hackersguide/: .hgignore  Makefile.am  Makefile.in  README  hackersguide.docbook  internals.docbook  intro.docbook  library.docbook  output.docbook  overview.docbook  stream.docbook
xine-lib/doc/internal/: HOWTO.release  README
xine-lib/doc/man/: Makefile.am  Makefile.in
xine-lib/include/: .hgignore  Makefile.am  Makefile.in  config.h  configure.h.in  configure.h.in~  xine.h
xine-lib/include/xine/: alphablend.h  array.h  audio_decoder.h  audio_out.h  broadcaster.h  buffer.h  compat.h  configfile.h  demux.h  info_helper.h  input_plugin.h  io_helper.h  list.h  metronom.h  os_types.h  osd.h  plugin_catalog.h  pool.h  post.h  refcounter.h  resample.h  ring_buffer.h  scratch.h  sorted_array.h  spu.h  spu_decoder.h  vdr.h  version.h.in  video_decoder.h  video_out.h  video_overlay.h  vo_scale.h  xine_buffer.h  xine_internal.h  xine_plugin.h  xineintl.h  xineutils.h  xmllexer.h  xmlparser.h
xine-lib/lib/: Makefile.am  Makefile.common  Makefile.in  asprintf.c  basename.c  dirent_msvc.c  gettimeofday.c  hstrerror.c  memmem.c  os_internal.h  setenv.c  strcasestr.c  strndup.c  strpbrk.c  strsep.c  strtok_r.c  timedlock.c  timegm.c  unsetenv.c
xine-lib/m4/: Makefile.am  Makefile.in  attributes.m4  audio_out.m4  decoders.m4  directx.m4  gas.m4  getopt_long.m4  input.m4  libFLAC.m4  macosx.m4  misc.m4  objc.m4  package.m4  pkg.m4  programs.m4  pthreads.m4  summary.m4  symbol.m4  types.m4  video_out.m4  xine.m4
xine-lib/misc/: .hgignore  Makefile.am  Makefile.common  Makefile.in  Makefile.plugins.in  Makefile.quiet  SlackBuild.in  build_rpms.sh.in  cdda_server.c  libdvdcss-1.2.6-network.patch  libxine.pc.in  make_release.sh  relchk.sh.in  xine-config.in  xine-fontconv.c  xine-lib.spec.in  xine-list.c
xine-lib/misc/fonts/: README.cetus
xine-lib/po/: LINGUAS  Makevars  Makevars.extra.in  POTFILES.in  cs.gmo  cs.po  de.gmo  de.po  en_US.gmo  en_US.po  eo.gmo  eo.po  es.gmo  es.po  eu.gmo  eu.po  fr.gmo  fr.po  it.gmo  it.po  ja.gmo  ja.po  libxine2.pot  pl.gmo  pl.po  pt_BR.gmo  pt_BR.po  sk.gmo  sk.po  tr.gmo  tr.po
xine-lib/src/: Makefile.am  Makefile.in
xine-lib/src/audio_dec/: Makefile.am  Makefile.in  ff_dvaudio_decoder.c  ff_dvdata.h  fooaudio.c  gsm610.c  xine_a52_decoder.c  xine_dts_decoder.c  xine_faad_decoder.c  xine_lpcm_decoder.c  xine_mad_decoder.c  xine_musepack_decoder.c
xine-lib/src/audio_out/: Makefile.am  (+16 more)
xine-lib/win32/: .hgignore  Makefile.am  Makefile.in  README  config.h  libdvdnav.dsp  libxine.def  libxine.dsp  libxinesupport.def  libxinesuppt.dsp  xine.dsw  xine_plugin.def  xineconsole.dsp  xineplug_ao_out_directx.dsp  xineplug_ao_out_directx2.dsp  xineplug_ao_out_none.dsp  xineplug_decode_a52.dsp  xineplug_decode_dts.dsp  xineplug_decode_ff.dsp  xineplug_decode_lpcm.dsp  xineplug_decode_mad.dsp  xineplug_decode_mpeg2.dsp  xineplug_decode_real.dsp  xineplug_decode_spu.dsp  xineplug_decode_spucc.dsp  xineplug_decode_sputext.dsp  xineplug_dmx_asf.dsp  xineplug_dmx_audio.dsp  xineplug_dmx_avi.dsp  xineplug_dmx_lpcm.dsp  xineplug_dmx_mpeg.dsp  xineplug_dmx_mpeg_block.dsp  xineplug_dmx_mpeg_elem.dsp  xineplug_dmx_mpeg_pes.dsp  xineplug_dmx_mpeg_ts.dsp  xineplug_dmx_nsv.dsp  xineplug_dmx_pva.dsp  xineplug_dmx_real.dsp  xineplug_dmx_slave.dsp  xineplug_dmx_sputext.dsp  (+11 more)
(+1052 files in other folders)
