include $(top_srcdir)/misc/Makefile.quiet
include $(top_srcdir)/misc/Makefile.common

# Order is important be careful changing SUBDIRS
SUBDIRS = \
	xine-utils \
	xine-engine \
	audio_out \
	audio_dec \
	video_out \
	video_dec \
	spu_dec \
	dxr3 \
	input \
	demuxers \
	libw32dll \
	libreal \
	post \
	combined \
	vdr
